# CSharpFromTheCppViewpoint

./: .gitignore  Lambda.md  README.md
CSharpTest/: .gitignore  CSharpTest.sln
CSharpTest/CSharpTest/: CSharpTest.xproj  Check.cs  LambdaTest.cs  ReferenceTypeTest.cs  ResourceManagementTest.cs  ValueReferenceTypeTest.cs  ValueTypeTest.cs  project.json  project.lock.json
CSharpTest/CSharpTest/Properties/: AssemblyInfo.cs
CppTest/: CMakeLists.txt
CppTest/test/: CMakeLists.txt  finally.hpp  lambda_test.cpp  resource_management_test.cpp  value_reference_test.cpp
